Fixed Table text wrapping problem
git-svn-id: http://joomlacode.org/svn/biblestudy/BibleStudy/Trunk@3386 a73faa7a-dd35-0410-af13-bd1c84eb1a9d

--- a/com_biblestudy/media/css/biblestudy.css
+++ b/com_biblestudy/media/css/biblestudy.css
@@ -4,8 +4,6 @@
     font-weight: bold;
     font-size: 14px;
     color: #000000;
-    white-space:nowrap;
-
 }
 #bsm_teachertable_list
 {
